# vprad

./: .gitignore  LICENSE.txt  Makefile  README.rst  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
demo_project/: manage.py
demo_project/src/contacts/: actions.py  models.py  views.py
demo_project/src/contacts/migrations/: 0001_initial.py
demo_project/src/contacts/tests/: factories.py  test_views.py
demo_project/src/demo_project/: settings.py  urls.py  views.py
demo_project/src/demo_project/jinja2/: login.jinja.html
demo_project/src/partners/: actions.py  forms.py  models.py
demo_project/src/partners/migrations/: 0001_initial.py
demo_project/src/partners/tests/: factories.py  test_transitions.py
demo_project/src/users/: __init__.py  actions.py  apps.py  models.py
tests/actions/: test_actions.py
tests/auth/: test_filters.py  test_levels.py  test_urlsign.py
tests/helpers/: test_callers.py  test_loggers.py
tests/views/: test_mixin_fieldsattr.py  test_mixin_modeldata.py  test_registry.py
vprad/: helpers.py
vprad/actions/: __init__.py  apps.py  decorators.py  forms.py  jinja.py  registry.py  signals.py  types.py  urls.py  views.py
vprad/auth/: __init__.py  jinja.py  types.py  urlsign.py
vprad/conf/: __init__.py  defaults.py
vprad/forms/: fields.py
vprad/models/: __init__.py
vprad/site/: __init__.py  apps.py  urls.py
vprad/site/jinja/: __init__.py  decorators.py  globals.py
vprad/static/vprad/: vprad.css  vprad.js
vprad/templates_old/vprad/: _base.html  action.html  base.html  simple_detail.html
vprad/views/: __init__.py  apps.py  defaults.py  helpers.py  jinja.py  registry.py  types.py  urls.py
vprad/views/generic/: detail.py  embedding.py  list.py  mixin.py
(+27 files in other folders)
